# krabb

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
krabb/: __init__.py  __main__.py  blocklist.py  cli.py  commandblock.py  db.py  fileprotect.py  hook.py  installer.py
krabb/dashboard/: __init__.py  server.py
krabb/dashboard/static/: app.js  components.js  index.html  style.css
tests/: test_blocklist.py  test_commandblock.py  test_db.py  test_fileprotect.py  test_hook.py
