[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "krabb"
version = "0.1.0"
description = "Web access analytics and control for Claude Code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dashboard = []
dev = ["pytest", "ruff"]

[project.scripts]
krabb = "krabb.cli:main"

[project.urls]
Homepage = "https://krabb.dev"
Repository = "https://github.com/brankopetric/krabb"
